--- a/first.html
+++ b/first.html
@@ -13,9 +13,13 @@
 
     </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
 <div class="container-fluid">
- 
+ <div class="row">
+    <div class="col-xs-8 col-sm-8">
+     <p class="nm">Flash-deal</p>
+     </div>
+    </div>
      <div id="main">
     <div class="container">
         
